tree-sitter-kod/test/corpus/basics.txt
==================
empty file
==================

---

(source_file)

==================
function declaration
==================

func add(a: int64, b: int64) -> int64 {
    return a + b
}

---

(source_file
  (function_declaration
    name: (identifier)
    params: (parameter_list
      (parameter
        first: (identifier)
        type: (named_type (identifier)))
      (parameter
        first: (identifier)
        type: (named_type (identifier))))
    return_type: (named_type (identifier))
    body: (block
      (return_statement
        (binary_expression
          lhs: (identifier)
          rhs: (identifier))))))

==================
import with selection
==================

import "json"
import "kod/codegen" { Codegen, Error }

---

(source_file
  (import_declaration path: (string_literal))
  (import_declaration
    path: (string_literal)
    item: (identifier)
    item: (identifier)))

==================
struct with fields and methods
==================

type Point = struct {
    x: int64
    y: int64

    func sum(self) -> int64 {
        return self.x + self.y
    }
}

---

(source_file
  (struct_declaration
    name: (identifier)
    body: (struct_body
      (struct_field name: (identifier) type: (named_type (identifier)))
      (struct_field name: (identifier) type: (named_type (identifier)))
      (function_declaration
        name: (identifier)
        params: (parameter_list (parameter first: (identifier)))
        return_type: (named_type (identifier))
        body: (block
          (return_statement
            (binary_expression
              lhs: (field_expression object: (identifier) name: (identifier))
              rhs: (field_expression object: (identifier) name: (identifier)))))))))

==================
enum with payload variants
==================

type Value = enum {
    Null
    Bool(value: bool)
    Number(value: int64)
}

---

(source_file
  (enum_declaration
    name: (identifier)
    (enum_variant name: (identifier))
    (enum_variant
      name: (identifier)
      (enum_variant_field name: (identifier) type: (named_type (identifier))))
    (enum_variant
      name: (identifier)
      (enum_variant_field name: (identifier) type: (named_type (identifier))))))

==================
match expression with block arms
==================

func describe(v: Value) -> str {
    match v {
        .Null -> { return "null" }
        .Bool(b) -> { return "bool" }
        else { return "other" }
    }
    return "unreachable"
}

---

(source_file
  (function_declaration
    name: (identifier)
    params: (parameter_list
      (parameter first: (identifier) type: (named_type (identifier))))
    return_type: (named_type (identifier))
    body: (block
      (expression_statement
        (match_expression
          subject: (identifier)
          (match_arm
            pattern: (implicit_variant name: (identifier))
            body: (block (return_statement (string_literal))))
          (match_arm
            pattern: (call_expression
              callee: (implicit_variant name: (identifier))
              (call_argument value: (identifier)))
            body: (block (return_statement (string_literal))))
          (match_arm body: (block (return_statement (string_literal))))))
      (return_statement (string_literal)))))

==================
test block with string name
==================

test "greets the world" {
    assert greet() == "hello"
}

---

(source_file
  (test_declaration
    name: (string_literal)
    body: (block
      (assert_statement
        (binary_expression
          lhs: (call_expression callee: (identifier))
          rhs: (string_literal))))))
